--- a/conf/application.conf
+++ b/conf/application.conf
@@ -52,6 +52,7 @@ db.default.password=""
 # By convention, the default server is named `default`
 #
 ebean.default="models.*"
+db.default.logStatements=true
 
 # Logger
 # ~~~~~
