--- a/conf/application.conf
+++ b/conf/application.conf
@@ -68,3 +68,5 @@ logger.play=INFO
 logger.application=DEBUG
 
 akka.actor.debug.receive = on
+db.default.logStatements=true
+logger.com.jolbox=DEBUG
